--- a/src/GWTAI.Angular/src/app/routes/dashboard/dashboard.html
+++ b/src/GWTAI.Angular/src/app/routes/dashboard/dashboard.html
@@ -1,1 +1,43 @@
 <page-header />
+
+
+<!-- Job Notifications -->
+ <div class="col-sm-6 col-md-3">
+    <mat-card [class]="['text-white', 'b-0', 'bg-green-50']">
+      <mat-card-header>
+        <mat-card-subtitle class="text-white">
+          Bookmarks File Uploaded
+        </mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+<div>Successful: {{jobNotifications.BookmarksUploadWorkflow.Completed}}</div>
+<div>In Progress: {{jobNotifications.BookmarksUploadWorkflow.InProgress}}</div>
+<div>Failed: {{jobNotifications.BookmarksUploadWorkflow.Failed}}</div>
+      </mat-card-content>
+    </mat-card>
+
+ </div>
+
+
+
+
+  <div class="col-sm-6 col-md-3">
+    <mat-card [class]="['text-white', 'b-0', stat.color]">
+      <mat-card-header>
+        <mat-card-subtitle class="text-white">{{
+          stat.title
+        }}</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <h2 class="m-t-0 m-b-8">{{ stat.amount }}</h2>
+        <mtx-progress
+          [value]="stat.progress.value"
+          height="2px"
+          foreground="rgba(255,255,255,1)"
+          background="rgba(0,0,0,.4)"
+        />
+        <small class="text-muted">Monthly</small>
+      </mat-card-content>
+    </mat-card>
+  </div>
+
