added bookmarks dynamic table with signalr

--- a/src/GWTAI.Angular/src/app/shared/components/dynamic-table/dynamic-table.component.html
+++ b/src/GWTAI.Angular/src/app/shared/components/dynamic-table/dynamic-table.component.html
@@ -12,7 +12,7 @@
         </mat-form-field>
         } @else if (!editingRow || editingRow[paginatorConfig.idKey!] !== row[paginatorConfig.idKey!] ||
         !column.editable) {
-        {{ row[column.key] }}
+        {{ column.pipe ? column.pipe(row[column.key]) : row[column.key] }}
         }
       </td>
     </ng-container>
