--- a/src/GWTAI.Angular/src/app/routes/bookmarks/bookmarks.html
+++ b/src/GWTAI.Angular/src/app/routes/bookmarks/bookmarks.html
@@ -9,7 +9,7 @@
         <span class="file-upload-button">Choose File</span>
         <span class="file-upload-filename">{{ uploadForm.get('fileName')?.value || 'No file chosen' }}</span>
       </label>
-      <input type="file" id="file" class="file-upload-input" (change)="onFileSelected($event)" accept=".html">
+      <input type="file" id="file" #fileInput class="file-upload-input" (change)="onFileSelected($event)" accept=".html">
 
       @if (uploadForm.get('fileContent')?.invalid && (uploadForm.get('fileContent')?.dirty || uploadForm.get('fileContent')?.touched)) {
         <div class="error-message">
